--- a/src/components/FreeVideos/FreeVideos.css
+++ b/src/components/FreeVideos/FreeVideos.css
@@ -1,5 +1,5 @@
 .videos-section {
-  height: 90vh;
+  min-height: 90vh;
   background-color: #e3f1f5;
   padding-top: 2%;
 }
@@ -16,10 +16,20 @@
   width: 85%;
   margin-left: 7.5%;
 }
+@media only screen and (max-width: 768px) {
+  .free-videos {
+    display: block;
+  }
+  .card {
+    width: 80vw !important;
+  }
+}
 .card {
-  width: 31% !important;
   margin-top: 0% !important;
-  height: 52vh;
+  margin-left: 1% !important;
+  margin-right: 1% !important;
+  min-height: 52vh;
+  min-height: 55vh;
 }
 
 .content {
