--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -33,8 +33,8 @@
   justify-content: space-evenly;
   display: flex;
 }
-.nav-logo img {
-  margin-top: -35%;
+.nav-logo svg {
+  margin-top: -35vw;
   margin-left: 80%;
   width: 15rem;
   height: 15rem;
