--- a/src/components/AboutInstructor/AboutInstructor.css
+++ b/src/components/AboutInstructor/AboutInstructor.css
@@ -7,7 +7,7 @@
 .about-constructor h2 {
   margin-block-start: 0;
   margin-block-end: 0;
-  font-size: 25px;
+  font-size: 4vh;
   font-weight: 900;
 }
 @media only screen and (max-width: 600px) {
@@ -31,7 +31,7 @@
 }
 .intro span {
   line-height: normal;
-  font-size: 20px;
+  font-size: 3.2vh;
   width: 50%;
   text-align: end;
   margin-top: 8%;
