--- a/src/components/CutomButton/CustomeButton.css
+++ b/src/components/CutomButton/CustomeButton.css
@@ -7,7 +7,7 @@
   font-family: "Cairo", sans-serif !important ;
   outline: none !important;
   border-radius: 0 !important;
-  font-size: 25px !important;
+  font-size: 3.9vh !important;
   font-weight: bold !important;
   color: white !important;
   background-color: rgb(0, 154, 243) !important;
