--- a/src/components/FreeVideos/FreeVideos.css
+++ b/src/components/FreeVideos/FreeVideos.css
@@ -1,12 +1,21 @@
+@media only screen and (max-width: 768px) {
+  .free-videos {
+    display: block !important;
+  }
+  .card {
+    width: 100% !important;
+  }
+}
 .videos-section {
-  min-height: 90vh;
+  min-height: 85vh;
   background-color: #e3f1f5;
   padding-top: 2%;
+  padding-bottom: 2%;
 }
 .videos-section h2 {
   margin-block-start: 0;
   margin-block-end: 0;
-  font-size: 25px;
+  font-size: 4vh;
   font-weight: 900;
 }
 .free-videos {
@@ -15,14 +24,6 @@
   display: flex;
   width: 85%;
   margin-left: 7.5%;
-}
-@media only screen and (max-width: 768px) {
-  .free-videos {
-    display: block;
-  }
-  .card {
-    width: 80vw !important;
-  }
 }
 .card {
   margin-top: 0% !important;
@@ -36,7 +37,7 @@
   max-height: 15vh !important;
 }
 .header {
-  font-size: 20px !important;
+  font-size: 3.2vh !important;
   font-weight: bold !important;
   font-family: "Cairo", sans-serif !important;
 }
@@ -45,7 +46,7 @@
   min-width: 12vw;
   border: none;
   color: white;
-  font-size: 16px;
+  font-size: 2.6vh;
   font-family: "Cairo", sans-serif;
   border-radius: 50px;
   outline: none;
