--- a/src/components/CutomButton/CustomeButton.css
+++ b/src/components/CutomButton/CustomeButton.css
@@ -2,7 +2,7 @@
 .sign-up-btn {
   margin: 0 !important;
   width: 50% !important;
-  height: 15vh !important;
+  min-height: 15vh !important;
   border: none !important;
   font-family: "Cairo", sans-serif !important ;
   outline: none !important;
