--- a/src/components/FreeVideos/FreeVideos.css
+++ b/src/components/FreeVideos/FreeVideos.css
@@ -1,16 +1,8 @@
-@media only screen and (max-width: 768px) {
-  .free-videos {
-    display: block !important;
-  }
-  .card {
-    width: 100% !important;
-  }
-}
 .videos-section {
-  min-height: 85vh;
+  min-height: 80vh;
   background-color: #e3f1f5;
   padding-top: 2%;
-  padding-bottom: 2%;
+  /* padding-bottom: 3%; */
 }
 .videos-section h2 {
   margin-block-start: 0;
@@ -18,31 +10,38 @@
   font-size: 4vh;
   font-weight: 900;
 }
+.header-highlight {
+  width: 7%;
+  background-color: #198baf;
+  height: 6px;
+  margin-top: 1%;
+  margin-left: 47%;
+  border-radius: 50px;
+}
 .free-videos {
   margin-top: 2%;
-  justify-content: space-between;
+  justify-content: space-around;
   display: flex;
   width: 85%;
   margin-left: 7.5%;
 }
 .card {
   margin-top: 0% !important;
+  margin-bottom: 0% !important;
   margin-left: 1% !important;
   margin-right: 1% !important;
-  min-height: 52vh;
-  min-height: 55vh;
+  min-height: 22vw !important;
 }
 
-.content {
-  max-height: 15vh !important;
-}
 .header {
+  height: max-content !important;
   font-size: 3.2vh !important;
   font-weight: bold !important;
   font-family: "Cairo", sans-serif !important;
 }
 .all-vids-btn {
-  margin-top: 2%;
+  margin-top: 3%;
+  margin-bottom: 5%;
   min-width: 12vw;
   border: none;
   color: white;
@@ -52,4 +51,14 @@
   outline: none;
   min-height: 7vh;
   background: #198baf;
+}
+
+@media only screen and (max-width: 768px) {
+  .free-videos {
+    display: block !important;
+  }
+  .card {
+    width: 100% !important;
+    margin-bottom: 3% !important;
+  }
 }
