--- a/src/pages/SignUP/SignUp.css
+++ b/src/pages/SignUP/SignUp.css
@@ -6,7 +6,7 @@
   background: #204f5d;
 }
 .sign-up-header h2 {
-  font-size: 4.8vh;
+  font-size: 4.4vmin;
   color: white;
   font-weight: 900;
 }
