--- a/src/components/AboutInstructor/AboutInstructor.css
+++ b/src/components/AboutInstructor/AboutInstructor.css
@@ -1,35 +1,15 @@
 .about-constructor {
   padding-top: 2%;
-  min-height: 70vh;
-  margin: 0;
+  height: fit-content;
   background-color: rgb(255, 255, 255);
 }
 .about-constructor h2 {
   margin-block-start: 0;
   margin-block-end: 0;
-  font-size: 4vh;
+  font-size: 4.3vmin;
   font-weight: 900;
 }
-@media only screen and (max-width: 600px) {
-  .intro {
-    display: block !important;
-  }
-  .intro img {
-    margin-left: 30%;
-    width: 45vw !important;
-  }
-}
-@media only screen and (max-width: 500px) {
-  .intro img {
-    margin-left: 25%;
-    width: 48vw !important;
-  }
-}@media only screen and (max-width: 400px) {
-  .intro img {
-    margin-left: 22%;
-    width: 55vw !important;
-  }
-}
+
 .intro {
   display: flex;
   min-height: 40vh;
@@ -38,12 +18,33 @@
 .intro img {
   margin-top: -3.5%;
   width: 32vw;
-  height: 68vh;
+  max-height: 68vh;
 }
-.intro span {
+.intro div {
   line-height: normal;
-  font-size: 3.2vh;
+  font-size: 2.8vmin;
+  padding-right: 2%;
   width: 50%;
-  text-align: end;
   margin-top: 8%;
+  text-align: right;
+}
+
+@media only screen and (max-width: 768px) {
+  .about-constructor {
+    padding-bottom: 3%;
+  }
+  .intro {
+    display: block;
+  }
+  .intro img {
+    margin-left: 2%;
+    width: 45vw;
+    margin-top: 0%;
+  }
+  .intro div {
+    padding-right: 0%;
+    width: 70%;
+    margin-left: auto !important;
+    margin-right: auto !important;
+  }
 }
