--- a/src/components/CutomButton/CustomeButton.css
+++ b/src/components/CutomButton/CustomeButton.css
@@ -2,12 +2,12 @@
 .sign-up-btn {
   margin: 0 !important;
   width: 50% !important;
-  min-height: 15vh !important;
+  height: 15% !important;
   border: none !important;
   font-family: "Cairo", sans-serif !important ;
   outline: none !important;
   border-radius: 0 !important;
-  font-size: 3.9vh !important;
+  font-size: 2.9vw !important;
   font-weight: bold !important;
   color: white !important;
   background-color: rgb(0, 154, 243) !important;
