--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -2,85 +2,68 @@
   min-height: 50vh;
   background: #0f3a47;
   padding-top: 7%;
-  padding-left: 10%;
+  width: 100%;
+  /* padding-left: 10%; */
 }
 .contact-info {
   width: fit-content;
-  font-size: 4vh;
-  padding-left: 10%;
+  font-size: 4.2vmin;
+  padding-left: 10vw;
   color: rgb(255, 255, 255);
 }
 .paragraph-image {
   display: flex;
   text-align: left;
+  justify-content: center;
 }
 .each-icon {
   color: white;
+  margin-right: auto !important;
+  margin-left: auto !important;
 }
 .each-icon-div {
-  border-radius: 50px;
+  border-radius: 50%;
   height: 11vh;
   width: 11vh;
   background-color: #204f5d;
-  padding-top: 1.5vw;
-  padding-left: 1vh;
+  padding-top: 22px;
   margin: 1vw;
-  /* margin-right: 1vw; */
 }
 .icons-div {
-  margin-left: 33%;
   display: flex;
+  justify-content: center;
 }
-@media only screen and (max-width: 600px) {
-  .footer-section-one {
-    padding-left: 27% !important;
-  }
+@media only screen and (max-width: 768px) {
   .paragraph-image {
-    display: block !important;
-  }
-  .each-icon-div{
-  padding-top: 2.2vw;
-  }
-  .icons-div {
-    margin-left: 4%;
+    display: inline-block;
+    margin-bottom: 3% !important;
   }
   .contact-info {
     padding-left: 0%;
     text-align: center;
   }
-  .footer-section-one {
-    padding-left: 33% !important;
+  .paragraph-image img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .each-icon-div {
+    height: 8vh;
+    width: 8vh;
+    padding-top: 14px;
   }
 }
-@media only screen and (max-width: 500px) {
-  .footer-section-one {
-    padding-left: 28% !important;
-  }
-  .each-icon-div{
-    padding-top: 2.9vw;
-    }
-}@media only screen and (max-width: 400px) {
-  .footer-section-one {
-    padding-left: 25% !important;
-  }
-  .each-icon-div{
-    padding-top: 3.5vw;
-    }
-}
-
-.footer-section-one img {
-  width: 35vh;
+.paragraph-image img {
+  width: 35vw;
   height: 20vh;
 }
 .footer-section-two {
-  min-height: 12vh;
-  padding-top: 2%;
-  text-align: center;
+  height: 12vh;
+  line-height: 12vh;
   background: #204f5d;
+  white-space: nowrap;
 }
-
 .footer-section-two span {
-  font-size: 4vh;
-  height: auto;
+  font-size: 3vmin;
   color: white;
 }
