--- a/src/components/FreeVideos/FreeVideos.css
+++ b/src/components/FreeVideos/FreeVideos.css
@@ -1,13 +1,14 @@
 .videos-section {
   min-height: 80vh;
   background-color: #e3f1f5;
-  padding-top: 2%;
+  padding-top: 3%;
+  width: 100%;
   /* padding-bottom: 3%; */
 }
 .videos-section h2 {
   margin-block-start: 0;
   margin-block-end: 0;
-  font-size: 4vh;
+  font-size: 4.3vmin;
   font-weight: 900;
 }
 .header-highlight {
@@ -20,10 +21,10 @@
 }
 .free-videos {
   margin-top: 2%;
-  justify-content: space-around;
+  justify-content: center;
   display: flex;
-  width: 85%;
-  margin-left: 7.5%;
+  width: 100%;
+  /* margin-left: 7.5%; */
 }
 .card {
   margin-top: 0% !important;
@@ -31,11 +32,12 @@
   margin-left: 1% !important;
   margin-right: 1% !important;
   min-height: 22vw !important;
+  width: 25% !important;
 }
 
 .header {
   height: max-content !important;
-  font-size: 3.2vh !important;
+  font-size: 3.2vmin !important;
   font-weight: bold !important;
   font-family: "Cairo", sans-serif !important;
 }
@@ -55,10 +57,13 @@
 
 @media only screen and (max-width: 768px) {
   .free-videos {
-    display: block !important;
+    display: block !important ;
+    margin-left: auto !important;
+    margin-right: auto !important;
+    width: 55%;
   }
   .card {
     width: 100% !important;
-    margin-bottom: 3% !important;
+    margin-bottom: 6% !important;
   }
 }
