--- a/src/components/SignUpForm/SignUpForm.css
+++ b/src/components/SignUpForm/SignUpForm.css
@@ -2,13 +2,12 @@
   .input-fields,
   .select-fields {
     width: 100% !important;
-  margin-right: 0% !important;
-
+    margin-right: 0% !important;
   }
 }
 
 .form h4 {
-  font-size: 2.9vh;
+  font-size: 2.9vmin;
   font-weight: 600;
 }
 .input-fields {
@@ -21,7 +20,7 @@
   margin-top: 3%;
 }
 .form label {
-  font-size: 3.1vh !important;
+  font-size: 3.1vmin !important;
   font-weight: 900 !important;
   color: #204f5d !important;
   margin-bottom: 2% !important;
@@ -31,11 +30,11 @@
   text-align: start !important;
 }
 .form ::placeholder {
-  font-size: 3vh;
+  font-size: 3vmin;
   text-align: right !important;
 }
 .divider {
-  font-size: 3.1vh;
+  font-size: 3.1vmin;
   position: absolute;
   right: 5% !important;
 }
